# vak_parser

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
vak_journals/: consts.py  parse_vak.py
